--- a/app/Resources/views/site/_partials/_footer.html.twig
+++ b/app/Resources/views/site/_partials/_footer.html.twig
@@ -63,7 +63,8 @@
                     Vila Velha ES - 29.102-570
                 </li>
                 <li><i class="fa fa-phone"></i>&nbsp; (027) 3349-9130</li>
-                <li><a href="mailto:info@yourdomain.com"><i class="fa fa-envelope"></i> adm@rcinformatica.net.br</a>
+                <li><i class="fa fa-whatsapp"></i>&nbsp; (027) 99824-9330</li>
+                <li><a href="mailto:atendimento@rcinformatica.net.br"><i class="fa fa-envelope"></i> atendimento@rcinformatica.net.br</a>
                 </li>
                 <li><img src="{{ asset('site/assets/images/footer-wmap.png') }}" alt=""/></li>
             </ul>
