--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -12,7 +12,7 @@
                         <ul>
                             <li class="link">
                                 <a class="" href="#">
-                                    <i class="fa fa-envelope"></i> adm@rcinformatica.net.br
+                                    <i class="fa fa-envelope"></i> atendimento@rcinformatica.net.br
                                 </a>
                             </li>
                             <li class="link">
@@ -60,7 +60,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('site_produtos2') }}"
+                                        <a href="{{ path('site_produtos') }}"
                                            class="{% if app.request.attributes.get('_route') == 'site_produtos' %}active{% endif %}">
                                             Produtos
                                         </a>
