--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -13,7 +13,7 @@
     <div class="content_fullwidth lessmar">
         <div class="container">
 
-            <div class="one_half">
+            <div class="one_full">
 
                 <div class="alileft"><h3>PAF-RC</h3></div>
 
@@ -26,185 +26,207 @@
                     e á atualizado constantemente de acordo com as novas exigências do governo.</p>
 
                 <br>
-                <div class="alileft"><h5>Automação Comercial</h5></div>
 
                 <p>O PAF-RC é uma ferramenta que proporciona maior competividade, eficiência e otimização dos processos
                     fiscais e de gerenciamento deixando a sua empresa mais eficiente e pronta para o mercado.</p>
 
             </div>
-            <div class="one_half last">
-                <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
-            </div>
 
         </div>
-
-        <div class="content_fullwidth lessmar">
-            <div class="container">
-                <div class="alileft"><h5>Personalização</h5></div>
-
-                <p>Interface amigável e usual, aderente às necessidades da organização. Com treinamento aos setores que
-                    utilizarão o PAF-RC e atendimento exclusivo para cada caso.
-                    Todo sistema é adaptado a sua empresa, seguindo parâmetros da legislação, e pronto para atender às
-                    exigências do mercado de trabalho. Com isso há um melhor gerenciamento de tempo ganhando agilidade
-                    nos
-                    processos e disponibilidade de informações gerenciais para uma melhor tomada de decisão.
-                </p>
-            </div>
-        </div>
-
-        <div class="clearfix margin_top5"></div>
-
-        <div class="container">
-            <div class="content_fullwidth">
-
-                <div class="one_half">
-                    <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
-                </div>
-
-                <div class="one_half last">
-                    <div class="framed-box">
-                        <div class="framed-box-wrap">
-                            <div class="pricing-title">
-                                <h4 class="nocaps">Faturamento | Estoque</h4>
-                            </div>
-                            <div class="pricing-text-list">
-                                <ul class="list1">
-                                    <li><i class="fa fa-chevron-right"></i> Entrada de Mercadorias</li>
-                                    <li><i class="fa fa-chevron-right"></i> Registro de Pré-Venda</li>
-                                    <li><i class="fa fa-chevron-right"></i> Ordem de Produção / Compra</li>
-                                    <li><i class="fa fa-chevron-right"></i> Produtos mais vendidos / Curva ABS</li>
-                                    <li><i class="fa fa-chevron-right"></i> Saldo de Produtos / Tabelas</li>
-                                    <li><i class="fa fa-chevron-right"></i> Faturamento Real / Contábil</li>
-                                    <li><i class="fa fa-chevron-right"></i> Registro de Inventário</li>
-                                    <li><i class="fa fa-chevron-right"></i> Formulações / Kits</li>
-                                    <li><i class="fa fa-chevron-right"></i> Etiquetas com Código de Barras</li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="clearfix margin_top5"></div>
-
-        <div class="container">
-            <div class="content_fullwidth">
-
-                <div class="one_third">
-                    <div class="framed-box">
-                        <div class="framed-box-wrap">
-                            <div class="pricing-title">
-                                <h4 class="nocaps">Financeiro</h4>
-                            </div>
-                            <div class="pricing-text-list">
-                                <ul class="list1">
-                                    <li><i class="fa fa-chevron-right"></i> Contas a Pagar / Pagas</li>
-                                    <li><i class="fa fa-chevron-right"></i> Contas a Receber / Recebidas</li>
-                                    <li><i class="fa fa-chevron-right"></i> Comissão</li>
-                                    <li><i class="fa fa-chevron-right"></i> Contas de Caixa ADM e Bancárias</li>
-                                    <li><i class="fa fa-chevron-right"></i> Transferências</li>
-                                    <li><i class="fa fa-chevron-right"></i> Cheques Compensados, Devolvidos ou
-                                        Repassados
-                                    </li>
-                                    <li><i class="fa fa-chevron-right"></i> Históricos de Caixa ADM e Bancários</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="one_third">
-                    <div class="framed-box">
-                        <div class="framed-box-wrap">
-                            <div class="pricing-title">
-                                <h4 class="nocaps">Fechamentos Mensais</h4>
-                            </div>
-                            <div class="pricing-text-list">
-                                <ul class="list1">
-                                    <li><i class="fa fa-chevron-right"></i> Sintegra</li>
-                                    <li><i class="fa fa-chevron-right"></i> Sped Fiscal</li>
-                                    <li><i class="fa fa-chevron-right"></i> Sped Pis Cofins</li>
-                                    <li><i class="fa fa-chevron-right"></i> Registro de Entrada e Saída</li>
-                                    <li><i class="fa fa-chevron-right"></i> Resgistros por CFOPs</li>
-                                    <li><i class="fa fa-chevron-right"></i> Movimento por ECF</li>
-                                    <li>&nbsp;</li>
-                                    <li>&nbsp;</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="one_third last">
-                    <div class="framed-box">
-                        <div class="framed-box-wrap">
-                            <div class="pricing-title">
-                                <h4 class="nocaps">Cupom, Nota Fiscal...</h4>
-                            </div>
-                            <div class="pricing-text-list">
-                                <ul class="list1">
-                                    <li><i class="fa fa-chevron-right"></i> Compatível com qualquer certificado Digital
-                                    </li>
-                                    <li><i class="fa fa-chevron-right"></i> Rápida emissão</li>
-                                    <li><i class="fa fa-chevron-right"></i> Segurança nos dados</li>
-                                    <li><i class="fa fa-chevron-right"></i> E-mail Automático</li>
-                                    <li><i class="fa fa-chevron-right"></i> Carta de Correção / Cancelamento /
-                                        Inutilização
-                                    </li>
-                                    <li>&nbsp;</li>
-                                    <li>&nbsp;</li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="content_fullwidth">
-
-                <div class="one_half">
-                    <div class="framed-box">
-                        <div class="framed-box-wrap">
-                            <div class="pricing-title">
-                                <h4 class="nocaps">Diferenciais</h4>
-                            </div>
-                            <div class="pricing-text-list">
-                                <ul class="list1">
-                                    <li><i class="fa fa-chevron-right"></i> Importação do XML na Entrada da NF</li>
-                                    <li><i class="fa fa-chevron-right"></i> Cadastro automático de Fornecedores</li>
-                                    <li><i class="fa fa-chevron-right"></i> Verificação automática dos Produtos</li>
-                                    <li><i class="fa fa-chevron-right"></i> Lançamento automático de totais e impostos
-                                    </li>
-                                    <li><i class="fa fa-chevron-right"></i> Backup nos nossos servidores na nuvem</li>
-                                    <li><i class="fa fa-chevron-right"></i> Interface simples e de fácil entendimento
-                                    </li>
-                                    <li><i class="fa fa-chevron-right"></i> Relatórios diferenciados</li>
-                                    <li><i class="fa fa-chevron-right"></i> Atende 100% às exigências da SEFAZ</li>
-                                    <li><i class="fa fa-chevron-right"></i> Controle por senhas dos usuários</li>
-                                    <li><i class="fa fa-chevron-right"></i> Totalmente parametrizável</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="one_half last">
-                    <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
-                </div>
-
-            </div>
-        </div>
-
     </div>
 
     <div class="clearfix margin_top5"></div>
+
+    <div class="feature_section11">
+        <div class="container animate fadeInUp" data-anim-type="fadeInUp">
+
+            <strong>Eleve Seu Negócio</strong>
+            <div class="clearfix"></div>
+            <div class="contbox">
+
+                <h5>Interface amigável e usual, aderente às necessidades da organização. Com treinamento aos setores
+                    que utilizarão o PAF-RC e atendimento exclusivo para cada caso. Todo sistema é adaptado a sua
+                    empresa, seguindo parâmetros da legislação, e pronto para atender às exigências do mercado de
+                    trabalho. Com isso há um melhor gerenciamento de tempo ganhando agilidade nos processos e
+                    disponibilidade de informações gerenciais para uma melhor tomada de decisão.</h5>
+                {#<br><br>
+                <a href="#" class="readmore_but1 nocurve"><i class="fa fa-hand-o-right"></i> &nbsp;Experimente
+                    Agora!</a>#}
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div class="feature_section35" style="padding: 40px 0px 0px 0px;">
+        <div class="container">
+
+            <br>
+
+            <h2>Principais <strong>Funcionalidades</strong></h2>
+
+            <div class="one_fourth">
+                <ul class="list_1">
+                    <li><h4>Faturamento | Estoque<br><br></h4></li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Entrada de Mercadorias</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Registro de Pré-Venda</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Ordem de Produção / Compra</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Produtos mais vendidos / Curva ABC</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Saldo de Produtos / Tabelas</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Faturamento Real / Contábil</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Registro de Inventário</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Formulações / Kits</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Etiquetas com Código de Barras</li>
+                </ul>
+            </div>
+
+            <div class="one_fourth">
+                <ul class="list_1">
+                    <li><h4>Financeiro<br><br></h4></li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Contas a Pagar / Pagas</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Contas a Receber / Recebidas</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Comissão</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Contas de Caixa ADM e Bancárias</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Transferências</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Cheques Compensados, Devolvidos ou Repassados
+                    </li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Históricos de Caixa ADM e Bancários</li>
+                </ul>
+            </div>
+
+            <div class="one_fourth">
+                <ul class="list_1">
+                    <li><h4>Fechamentos Mensais<br><br></h4></li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Sintegra</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Sped Fiscal</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Sped Pis Cofins</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Registro de Entrada e Saída</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Registros por CFOP´s</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Movimento por ECF</li>
+                </ul>
+            </div>
+
+            <div class="one_fourth last">
+                <ul class="list_1">
+                    <li>
+                        <h4> Cupom Fiscal <span style="font-size: 16px;">(Daruma/Bematech)</span>
+                            <br> NF-e <span style="font-size: 16px;">(Nota Fiscal Eletrônica)</span>
+                            <br> Nfc-e <span style="font-size: 16px;">(Nota Fiscal de Consumidor Eletrônica)</span>
+                        </h4></li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Compatível com qualquer certificado Digital</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Rápida emissão</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Segurança nos dados</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> E-mail Automático</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> Carta de Correção / Cancelamento / Inutilização
+                    </li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+            <br><br>
+
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div class="feature_section22">
+        <div class="container">
+
+            <h1>
+                Diferenciais PAF-RC
+                <b></b>
+            </h1>
+
+            <div class="clearfix margin_top7"></div>
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp">
+                <div class="secbox">
+
+                    <i class="fa fa-file-text-o"></i>
+                    <div class="clearfix"></div>
+                    <h4>Importação do XML na Entrada da NF <br><br></h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="100">
+                <div class="secbox">
+
+                    <i class="fa fa-user"></i>
+                    <div class="clearfix"></div>
+                    <h4>Cadastro Automático de Fornecedores</h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
+                <div class="secbox">
+
+                    <i class="fa fa-tag"></i>
+                    <div class="clearfix"></div>
+                    <h4>Verificação automática dos Produtos</h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="300">
+                <div class="secbox">
+
+                    <i class="fa fa-tag"></i>
+                    <div class="clearfix"></div>
+                    <h4>Lançamento automático de totais e impostos</h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="clearfix margin_top7"></div>
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp">
+                <div class="secbox">
+
+                    <i class="fa fa-cloud-download"></i>
+                    <div class="clearfix"></div>
+                    <h4>Backup nos nossos servidores na nuvem</h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="100">
+                <div class="secbox">
+
+                    <i class="fa fa-eye"></i>
+                    <div class="clearfix"></div>
+                    <h4>Interface simples e de fácil entendimento</h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
+                <div class="secbox">
+
+                    <i class="fa fa-tasks"></i>
+                    <div class="clearfix"></div>
+                    <h4>Relatórios diferenciados <br><br></h4>
+
+                </div>
+            </div><!-- end section -->
+
+            <div class="one_fourth last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="300">
+                <div class="secbox">
+
+                    <i class="fa fa-check"></i>
+                    <div class="clearfix"></div>
+                    <h4>Atende 100% às exigências da SEFAZ</h4>
+
+                </div>
+            </div><!-- end section -->
+
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
 
     <div class="feature_section19">
         <div class="container">
