--- a/app/Resources/views/site/_partials/_block_stylesheets.html.twig
+++ b/app/Resources/views/site/_partials/_block_stylesheets.html.twig
@@ -24,6 +24,14 @@
 <!-- slide panel -->
 <link rel="stylesheet" type="text/css" href="{{ asset('site/assets/js/slidepanel/slidepanel.css') }}">
 
+{#<!-- Master Slider -->
+<link rel="stylesheet" href="{{ asset('site/assets/js/masterslider/style/masterslider.css') }}" />
+<link rel="stylesheet" href="{{ asset('site/assets/js/masterslider/skins/default/style.css') }}" />
+<link rel="stylesheet" href="{{ asset('site/assets/js/masterslider/style.css') }}" />
+
+<!-- MasterSlider Laptop Style -->
+<link href='{{ asset('site/assets/js/masterslider/ms-laptop-style.css') }}' rel='stylesheet' type='text/css'>#}
+
 <!-- cubeportfolio -->
 <link rel="stylesheet" type="text/css" href="{{ asset('site/assets/js/cubeportfolio/cubeportfolio.min.css') }}">
 
