--- a/web/site/assets/css/style.css
+++ b/web/site/assets/css/style.css
@@ -5269,7 +5269,7 @@ ul.clients_home {
 	width: 100%;
 	padding: 70px 0px;
 	text-align: center;
-	background: url(../images/parallax-bg.jpg) repeat-y center top;
+	background: url(../images/parallax-bg11.jpg) repeat-y center top;
 }
 .fusection5 img {
 	border: 7px solid #fff;
