--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -13,73 +13,138 @@
         <div class="container">
 
             <img src="{{ asset('site/assets/images/site-img81.jpg') }}" alt="" class="rimg">
-
             <br><br>
-
             <div class="alileft"><h3>Quem Somos</h3></div>
-
-            <p>A RC Informática está há 18 anos no mercado lançando e aprimorando produtos que gerenciam e facilitam a
+            <br>
+            <p>A RC Informática está há 18 anos no mercado lançando e aprimorando produtos que gerenciam e facilitam
+                a
                 tomada de decisões em empresas que precisam de respostas eficientes.
-                Atenda as demandas do mercado e às mudanças na legislação, mantemos profissionais especializados e em
-                acompanhamento full time para garantir atualizações à frente da concorrência, garantindo resposta rápida
+                Atenda as demandas do mercado e às mudanças na legislação, mantemos profissionais especializados e
+                em
+                acompanhamento full time para garantir atualizações à frente da concorrência, garantindo resposta
+                rápida
                 e resultados para que sua empresa se mantenha competitiva e você tenha muito mais tranquilidade.
             </p>
 
-            <div class="clearfix divider_dashed2"></div><!-- end divider line -->
-
         </div>
+    </div>
 
+    <div class="clearfix"></div>
+
+    <div class="fusection5" style="background: none; padding: 45px 0px">
         <div class="container">
 
-            <div class="clients">
+            <div class="one_half animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="200">
 
-                <div class="container">
+                <div class="alileft" align="left"><h3>O Que Fazemos</h3></div>
+                <br>
+                <p align="left">A RC Informática está há 18 anos no mercado lançando e aprimorando produtos que
+                    gerenciam e facilitam
+                    a
+                    tomada de decisões em empresas que precisam de respostas eficientes.
+                    Atenda as demandas do mercado e às mudanças na legislação, mantemos profissionais especializados e
+                    em
+                    acompanhamento full time para garantir atualizações à frente da concorrência, garantindo resposta
+                    rápida
+                    e resultados para que sua empresa se mantenha competitiva e você tenha muito mais tranquilidade.
+                </p>
 
-                    <h3>Nossos <strong>Clientes</strong></h3>
-                    <br>
-                    <div class=" jcarousel-skin-tango">
-                        <div class="jcarousel-container jcarousel-container-horizontal"
-                             style="position: relative; display: block;">
-                            <div class="jcarousel-clip jcarousel-clip-horizontal" style="position: relative;">
-                                <ul id="mycarouselthree" class="jcarousel-list jcarousel-list-horizontal"
-                                    style="overflow: hidden; position: relative; top: 0px; margin: 0px; padding: 0px; left: 0px; width: 2035px;">
+            </div>
 
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-1 jcarousel-item-1-horizontal"
-                                        jcarouselindex="1" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-2 jcarousel-item-2-horizontal"
-                                        jcarouselindex="2" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-3 jcarousel-item-3-horizontal"
-                                        jcarouselindex="3" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-4 jcarousel-item-4-horizontal"
-                                        jcarouselindex="4" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-5 jcarousel-item-5-horizontal"
-                                        jcarouselindex="5" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-6 jcarousel-item-6-horizontal"
-                                        jcarouselindex="6" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-7 jcarousel-item-7-horizontal"
-                                        jcarouselindex="7" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-8 jcarousel-item-8-horizontal"
-                                        jcarouselindex="8" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
-                                    <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-9 jcarousel-item-9-horizontal"
-                                        jcarouselindex="9" style="float: left; list-style: none;"><img
-                                                src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+            <div class="one_half last animate fadeInUp" data-anim-type="fadeInUp" data-anim-delay="350">
 
-                                </ul>
-                            </div>
-                            <div class="jcarousel-prev jcarousel-prev-horizontal jcarousel-prev-disabled jcarousel-prev-disabled-horizontal"
-                                 style="display: block;" disabled="disabled"></div>
-                            <div class="jcarousel-next jcarousel-next-horizontal" style="display: block;"></div>
-                        </div>
+                <div class="alileft" align="left"><h3>Parceiros</h3></div>
+                <br>
+                <div class="one_half">
+                    <img src="{{ asset('site/assets/images/Logo_bematech.jpg') }}" alt=""
+                         style="border: 3px solid #f4f4f4; width: 80%" align="left">
+                </div>
+
+                <div class="one_half last">
+                    <img src="{{ asset('site/assets/images/Logo_Daruma.jpg') }}" alt=""
+                         style="border: 3px solid #f4f4f4; width: 80%;" align="left">
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div class="feature_section19">
+        <div class="container">
+
+            <h1>
+                Nossos Clientes
+                <b>Confira alguns testemunhos sobre nós</b>
+            </h1>
+            <br/><br/>
+            <div class="clearfix"></div>
+
+            <div>
+                <div class="slider nosidearrows">
+                    <div class="flexslider carousel">
+                        <ul class="slides">
+
+                            <li>
+
+                                <div class="one_half">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Marison Avasty</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                                <div class="one_half last">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Jacob Alexander</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                            </li><!-- end section -->
+
+                            <li>
+
+                                <div class="one_half">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Darlene Aja</strong> &nbsp;<i>custmer</i> <img
+                                                src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                                <div class="one_half last">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Glen Lincoln</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                            </li><!-- end section -->
+
+                        </ul>
                     </div>
-
                 </div>
 
             </div>
@@ -89,20 +154,24 @@
 
     <div class="clearfix margin_top5"></div>
 
-{% endblock %}
+    <div class="clients">
 
-{% block javascripts %}
-    {{ parent() }}
+        <div class="container">
+            <ul id="mycarouselthree" class="jcarousel-skin-tango">
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+                <li><img src="{{ asset('site/assets/images/client-logo1.png') }}" alt=""></li>
+            </ul>
+        </div>
 
-    <!-- jquery jcarousel -->
-    <script type="text/javascript">
-        (function($) {
-            "use strict";
+    </div>
 
-            jQuery(document).ready(function() {
-                jQuery('#mycarouselthree').jcarousel();
-            });
+    <div class="clearfix margin_top5"></div>
 
-        })(jQuery);
-    </script>
 {% endblock %}
